--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -5782,16 +5782,16 @@
  JPK_neutrality_ADJ: "Japanese Restorationist Government"
  JPK_nationalist_ADJ: "Japanese Restorationist Government"
  
- JPW_democratic: "Western Provisional Government of Japan"
- JPW_democratic_DEF: "The Western Provisional Government of Japan"
- JPW_communism: "Western Provisional Government of Japan"
- JPW_communism_DEF: "The Western Provisional Government of Japan"
- JPW_fascism: "Western Provisional Government of Japan"
- JPW_fascism_DEF: "The Western Provisional Government of Japan"
- JPW_neutrality: "Western Provisional Government of Japan"
- JPW_neutrality_DEF: "The Western Provisional Government of Japan"
- JPW_nationalist: "Western Provisional Government of Japan"
- JPW_nationalist_DEF: "The Western Provisional Government of Japan"
+ JPW_democratic: "Provisional Government of Western Japan"
+ JPW_democratic_DEF: "The Provisional Government of Western Japan"
+ JPW_communism: "Provisional Government of Western Japan"
+ JPW_communism_DEF: "The Provisional Government of Western Japan"
+ JPW_fascism: "Provisional Government of Western Japan"
+ JPW_fascism_DEF: "The Provisional Government of Western Japan"
+ JPW_neutrality: "Provisional Government of Western Japan"
+ JPW_neutrality_DEF: "The Provisional Government of Western Japan"
+ JPW_nationalist: "Provisional Government of Western Japan"
+ JPW_nationalist_DEF: "The Provisional Government of Western Japan"
  JPW_democratic_ADJ: "Japanese Provisional Government"
  JPW_communism_ADJ: "Japanese Provisional Government"
  JPW_fascism_ADJ: "Japanese Provisional Government"
