--- a/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
@@ -380,8 +380,6 @@
  CHI_Gateway_To_Pacific_desc: "现在，我们突破了第一岛链，我们的舰队进入了太平洋，下一个挑战就在我们面前。"
  CHI_The_Untapped_Market: "未开发的市场"
  CHI_The_Untapped_Market_desc: "进入21世纪的中国经济高速增长，这是世界上前所未见的。在过去的几十年里，日本乃至美国的经济影响力都在稳步下降。然而，这种快速的经济发展并非没有代价。[CHI.GetLeader]必须确定中国是否会继续目前的轨迹，采用新的方法，甚至回到过去的老路上。"
- CHI_Break_the_Iron_Rice_Bowl: "打破铁饭碗"
- CHI_Break_the_Iron_Rice_Bowl_desc: "铁饭碗的是为公共部门和国有企业的员工广泛提供工作保障和福利。虽然这在过去对我们的国家很有帮助，但加入世界贸易组织的一个先决条件是废除这种做法。"
  CHI_Ratification_of_WTO: "加入世贸组织"
  CHI_Ratification_of_WTO_desc: "长期以来，我们被排除在世贸组织成员共享的全球贸易利益之外。现在，随着我们完全加入这个国际贸易组织，我们可以更好地利用西方自由经济秩序的制度来为我们带来优势，因此这种情况也会发生改变。"
  CHI_Encourage_Foreign_Investment: "鼓励外国投资"
@@ -414,8 +412,6 @@
  CHI_Export_Driven_Economy_desc: "单靠内部市场消费不足以使中国成为世界第一经济大国。我们应该利用我们对经济的控制，使其转向向世界其他地区出口制成品。"
  CHI_Factory_of_the_World: "世界工厂"
  CHI_Factory_of_the_World_desc: "我们的生产潜力现在应该充分发挥。现在是我们作为世界生产中心在全球经济中留下印记的时候了。"
- CHI_Socialism_with_Chinese_Characteristics: "重构社会主义"
- CHI_Socialism_with_Chinese_Characteristics_desc: "自中国改革开放以来，我国经济不平等不断加剧，党内腐败泛滥。在服务“经济建设”的过程中，我们的前辈们忘记了中国共产党的初衷，即为中国人民服务。是时候回到革命的旧方式了。"
  CHI_Denounce_Deng_Xiaoping: "全盘否定邓小平"
  CHI_Denounce_Deng_Xiaoping_desc: "如果不处理邓小平的遗产，就不可能摆脱中国目前的颓废局面。只要这个人被铭记为中国发展的英雄，人民就不会接受我们必要的改革。我们的政府必须谴责他和所有支持他的人。"
  CHI_Mao_Zedong_Thought: "毛泽东思想"
@@ -1593,3 +1589,7 @@
  CHI_QQ: "QQ"
  CHI_QQ_desc: "一款自主可控的即时通讯软件是非常有必要的，也能满足人们相互沟通的需求。"
  CHI_taiwan_strait_war: "台海之战爆发"
+ CHI_Smash_the_Iron_Rice_Bowl: "打碎铁饭碗"
+ CHI_Smash_the_Iron_Rice_Bowl_desc: "“铁饭碗”是指为公共部门和国有企业的员工提供广泛的工作保障和福利。虽然这在过去对我国很有好处，但加入世界贸易组织的一个先决条件是废除这种做法。"
+ CHI_Socialist_Reconstruction: "重建社会主义"
+ CHI_Socialist_Reconstruction_desc: "自中国改革开放以来，我国经济不平等不断加剧，党内腐败泛滥。在为“经济建设”服务的过程中，我们的前辈们忘记了中国共产党的初衷，即为中国人民服务。是时候回到革命的老路上了。"
