--- a/localisation/simp_chinese/countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/countries_l_simp_chinese.yml
@@ -5406,16 +5406,16 @@
  JPK_fascism_ADJ: "日本维新主义政府"
  JPK_neutrality_ADJ: "日本维新主义政府"
  JPK_nationalist_ADJ: "日本维新主义政府"
- JPW_democratic: "日本亲西方临时政府"
- JPW_democratic_DEF: "日本亲西方临时政府"
- JPW_communism: "日本亲西方临时政府"
- JPW_communism_DEF: "日本亲西方临时政府"
- JPW_fascism: "日本亲西方临时政府"
- JPW_fascism_DEF: "日本亲西方临时政府"
- JPW_neutrality: "日本亲西方临时政府"
- JPW_neutrality_DEF: "日本亲西方临时政府"
- JPW_nationalist: "日本亲西方临时政府"
- JPW_nationalist_DEF: "日本亲西方临时政府"
+ JPW_democratic: "西日本临时政府"
+ JPW_democratic_DEF: "西日本临时政府"
+ JPW_communism: "西日本临时政府"
+ JPW_communism_DEF: "西日本临时政府"
+ JPW_fascism: "西日本临时政府"
+ JPW_fascism_DEF: "西日本临时政府"
+ JPW_neutrality: "西日本临时政府"
+ JPW_neutrality_DEF: "西日本临时政府"
+ JPW_nationalist: "西日本临时政府"
+ JPW_nationalist_DEF: "西日本临时政府"
  JPW_democratic_ADJ: "日本临时政府"
  JPW_communism_ADJ: "日本临时政府"
  JPW_fascism_ADJ: "日本临时政府"
