--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -699,6 +699,7 @@
  BLR_Promote_new_officers_desc: "We will complete a set of measures for the transformation of our armed forces, which began in 1994"
  BLR_Internet_cencorship: "Internet Censorship"
  BLR_Internet_cencorship_desc: "The Internet has become a platform where moods aimed at overthrowing the government are often discussed, it is necessary to control this"
+ BLR_kgb: "KGB"
  BLR_Batka_policy: "Internet Censorship"
  BLR_Batka_policy1: "Decree on Parasitism"
  BLR_Batka_policy2: "Internet Policy of Belarus"
@@ -1381,11 +1382,29 @@
  BLR_revoult_army_gco_anti_corrupt: "Anti-Corruption Revolutionary Committee"
  BLR_revoult_army_gco_anti_corrupt_desc: "We will create a special unit that will deal with the fight against corruption in our country, no one will hide from the hand of justice."
  BLR_revoult_army_gco_air: "Air Force"
- BLR_revoult_army_gco_air_desc: "We will create and give our guards the opportunity to use aviation to fulfill their goals."
+ BLR_revoult_army_gco_air_desc: "We will create and give our guards the opportunity to use aviation to fulfill their goals"
+ BLR_revoult_army_gco_drone: "Drone Troops"
+ BLR_revoult_army_gco_dronedesc: "We will actively use drones in our army to improve its effectiveness"
  BLR_revoult_army_anti_west: "The Anti-Western Doctrine"
  BLR_revoult_army_anti_west_desc: "Western civilization has always been and will always be our enemy, which seeks to destroy us."
  BLR_revoult_army_interbrigade: "Interbrigades"
  BLR_revoult_army_interbrigade_desc: "We intend to form units of interbrigades, which we will send abroad to protect our interests."
+ BLR_kgb_expanded: "Expand the KGB"
+ BLR_kgb_expanded_desc: "We will strengthen the influence of the KGB, because we do not intend to dissolve such an effective pro-state structure"
+ BLR_army_stabilize: "Stabilize The Army"
+ BLR_army_stabilize_desc: "For our further purposes, we need to restore the combat capability of the army"
+ BLR_prepare_attacks: "Preparing for Interventions"
+ BLR_prepare_attacks_desc: "Our army is ready, we have assembled an impressive force of troops and are ready to expand the influence of our country on the former territory of the USSR."
+ BLR_baltic_campaign: "The Baltic Campaign"
+ BLR_baltic_campaign_desc: "We will begin preparations for a military campaign in the Baltic States. These countries do not have the right to independence and existence!"
+ BLR_baltic_war: "Start the Baltic March"
+ BLR_baltic_war_desc: "Our army has taken up positions and is ready to begin a march on the Baltic States"
+ BLR_ukraine_campaign: "The Ukrainian Campaign"
+ BLR_ukraine_campaign_desc: "Our Southern neighbor is showing signs of what it can do in a military-political bloc hostile to us, followed by an attack on us, we must strike first!"
+ BLR_ukraine_campaign_border_prepare: "Strengthen The Border With Ukraine"
+ BLR_ukraine_campaign_border_prepare_desc: "Despite the fact that we are attacking, we should take care of possible scenarios, so we will prepare fortifications on the border"
+ BLR_ukraine_campaign_war: "Start A Ukrainian Campaign"
+ BLR_ukraine_campaign_war_desc: "Our Army is ready! forward to Kiev!"
 
 
 
@@ -1397,6 +1416,8 @@
  #Ideas
  BLR_nazbol_soviet_system_idea: "National Bolshevik Economic System"
  BLR_revoult_army_idea: "Revolutionary Army"
+ BLR_anti_baltic_idea: "The Anti-Baltic Doctrine"
+ BLR_anti_ukraine_idea: "The Anti-Ukrainian doctrine"
  BLR_anti_west_idea: "The Anti-Western Doctrine"
  GCO_anti_corruption_idea: "Anti-Corruption Revolutionary Committee"
  GCO_idea: "Guards of Communism Orthodox"
