blr fix nazbols

--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -1405,6 +1405,8 @@
  BLR_ukraine_campaign_border_prepare_desc: "Despite the fact that we are attacking, we should take care of possible scenarios, so we will prepare fortifications on the border"
  BLR_ukraine_campaign_war: "Start A Ukrainian Campaign"
  BLR_ukraine_campaign_war_desc: "Our Army is ready! forward to Kiev!"
+ BLR_military_nazbol: "Investments in The Military Industry"
+ BLR_military_nazbol_desc: "Our military industry has still not recovered to the level of Soviet times, we must fix this"
 
 
 
