--- a/localisation/english/MD_autonomy_l_english.yml
+++ b/localisation/english/MD_autonomy_l_english.yml
@@ -30,6 +30,9 @@
  autonomy_autonomous_province: "Autonomous Province of Serbia"
  autonomy_autonomous_province1: "Subject of The Federation"
  danish_crown_holding: "Danish Crown Holding"
+ autonomy_uar_state: "State"
+ autonomy_uar_province: "Province"
+ autonomy_uar_regional_command: "Regional Command"
 
  subject_hates: "Opinion of Overlord: Hatred"
  subject_hates_desc: "[Root.GetNameDef] has a deep hatred towards their overlord. It is likely that they will start a violent uprising soon unless the situation is mended."
