--- a/localisation/english/factions_l_english.yml
+++ b/localisation/english/factions_l_english.yml
@@ -248,3 +248,6 @@
  faction_fifth_international_member_TT: "§RFaction Special Rules§!:\n- Only countries that are ruled by Emerging or Non-Aligned Communists are allowed in the faction"
  faction_fifth_international_member_join_faction_rule_tt: "§RWe need to be ruled by [Communist-State_L] or [Neutral_Communism_L] to join the 5th International!§!"
  faction_fifth_international_member_offer_join_faction_rule_tt: "§RThey need to be ruled by [Communist-State_L] or [Neutral_Communism_L] to join the 5th International!§!"
+ 
+ #UAR faction
+ UAR_arab_liberation_front: "Arab Liberation Front"
