--- a/localisation/simp_chinese/MD_Syrian_content_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_Syrian_content_l_simp_chinese.yml
@@ -1,15 +1,15 @@
 ﻿l_simp_chinese:
- TT_SYR_GREATER_SYRIA_REQ: "除[Nat_Populism_L]外，必须有一个民族主义政党执政"
+ TT_SYR_GREATER_SYRIA_REQ: "除[Nat_Fascism_L]外，必须有一个民族主义政党执政"
  TT_SYR_REVIVE_BAATHISM_COST: "对每个国家施加影响力都将花费我们§R$1§!§RB§!\n"
  TT_SYR_DEAL_WITH_ROJAVA: "我们已经承诺让叙利亚库尔德斯坦独立\n"
  TT_GET_EVENTS_FOCUS: "我们将会触发事件\n"
  TT_SYR_POST_WAR_FINISHED: "我们完成了内战后的分支国策。\n"
  TT_SYR_BAATHIST_IN_POWER: "[Autocracy_L]必须是执政党"
  TT_SYR_SOCIAL_DEMOCRAT_WIN: "[socialism_L]赢得大选"
- TT_SYR_POPULIST_WIN: "[Nat_Populism_L]赢得大选"
+ TT_SYR_POPULIST_WIN: "[Nat_Fascism_L]赢得大选"
  TT_SYR_ISLAMIST_WIN: "[Neutral_Muslim_Brotherhood_L]赢得大选"
  TT_SYR_SOCIAL_DEMOCRAT_PATH_REQ: "[socialism_L]必须是执政党"
- TT_SYR_POPULIST_PATH_REQ: "[Nat_Populism_L]必须是执政党"
+ TT_SYR_POPULIST_PATH_REQ: "[Nat_Fascism_L]必须是执政党"
  TT_SYR_ISLAMIST_PATH_REQ: "[Neutral_Muslim_Brotherhood_L]必须是执政党"
  TT_SYR_INTEGRATE_THE_UNION: "未来由§G新兴主义统治者§!([Autocracy_L])统治的阿拉伯国家将申请加入阿拉伯联合共和国"
  TT_SYR_REDUCE_TAXES_5: "人口税率将会降低§Y5%§!"
