--- a/localisation/simp_chinese/MD_autonomy_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_autonomy_l_simp_chinese.yml
@@ -39,3 +39,6 @@
  autonomy_satellite_state_colored: "卫星国"
  autonomy_puppet_state_colored: "傀儡国"
  autonomy_autonomous_state_colored: "自治区"
+ autonomy_uar_state: "州"
+ autonomy_uar_province: "省"
+ autonomy_uar_regional_command: "地区指挥部"
