--- a/localisation/simp_chinese/MD_custom_achievements_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_custom_achievements_l_simp_chinese.yml
@@ -172,3 +172,13 @@
  GER_capture_poland_again_DESC: "在喜爱的皮耶罗吉和科特莱特度过了一个超长的假期后，我们要搬回去了……再一次……"
  take_back_eritrea_NAME: "收回厄立特里亚"
  take_back_eritrea_DESC: "夺回我们分离的厄立特里亚。"
+ u_ar_great_NAME: "你是最棒的"
+ u_ar_great_DESC: "统一阿拉伯联合共和国或阿拉伯共和国联邦"
+ lawrence_of_arabia_NAME: "阿拉伯的劳伦斯"
+ lawrence_of_arabia_DESC: "作为联合王国，向阿拉伯联合共和国或阿拉伯共和国联邦派遣志愿者"
+ technically_everyone_is_an_arab_NAME: "事实上，从技术上讲，美国以外的任何人都是阿拉伯人"
+ technically_everyone_is_an_arab_DESC: "作为阿拉伯联合共和国或阿拉伯共和国联邦，是除美国之外唯一存在的国家"
+ are_you_sure_thats_enough_NAME: "你确定这就足够了吗？"
+ are_you_sure_thats_enough_DESC: "在统一阿拉伯人之前控制至少90%的阿拉伯国内生产总值"
+ i_hate_arabs_NAME: "但为了充分披露，我不得不说，我讨厌阿拉伯人"
+ i_hate_arabs_DESC: "在战争中击败阿拉伯联合共和国或阿拉伯共和国联邦"
