--- a/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
@@ -2185,7 +2185,7 @@
  BLR_revoult_army_gco_anti_corrupt: "反贪革命委员会"
  BLR_revoult_army_gco_anti_corrupt_desc: "我们将成立一个特别单位来处理我国的反腐败斗争，没有人能逃避正义之手。"
  BLR_revoult_army_gco_air: "空军"
- BLR_revoult_army_gco_air_desc: "我们将创造并让我们的警卫有机会利用航空来实现他们的目标。"
+ BLR_revoult_army_gco_air_desc: "我们将创造并让我们的部队有机会利用飞行器来实现他们的目标。"
  BLR_revoult_army_anti_west: "反西方主义"
  BLR_revoult_army_anti_west_desc: "西方文明一直是、也将永远是我们的敌人，它企图摧毁我们。"
  BLR_revoult_army_interbrigade: "国际纵队"
@@ -2208,3 +2208,26 @@
  belarus_another.65.d: "我们试图利用我们所有的行政和执法资源以及关系在白俄罗斯发动政变。"
  belarus_another.65.a: "让我们看看结果"
  BLR_oil_sov: "与白俄罗斯的能源合同"
+ BLR_kgb: "KGB"
+ BLR_revoult_army_gco_drone: "无人机部队"
+ BLR_revoult_army_gco_dronedesc: "我们将在我军中积极使用无人机，提高军队效能。"
+ BLR_kgb_expanded: "扩充KGB"
+ BLR_kgb_expanded_desc: "我们将加强KGB的影响力，因为我们不打算解散这样一个有效的亲国家机构。"
+ BLR_army_stabilize: "稳定军队"
+ BLR_army_stabilize_desc: "为了我们更长远的目标，我们需要恢复军队的战斗力。"
+ BLR_prepare_attacks: "准备干预"
+ BLR_prepare_attacks_desc: "我们的军队已做好准备，我们已经集结了一支令人印象深刻的部队，并准备扩大我国对前苏联领土的影响力。"
+ BLR_baltic_campaign: "波罗的海战役"
+ BLR_baltic_campaign_desc: "我们将开始为波罗的海国家的军事行动做准备。这些国家没有独立和存在的权利！"
+ BLR_baltic_war: "开始波罗的海远征"
+ BLR_baltic_war_desc: "我军已就位，准备向波罗的海国家进军。"
+ BLR_ukraine_campaign: "乌克兰战役"
+ BLR_ukraine_campaign_desc: "我们的南方邻国正在显示出它可以在一个敌视我们的军事政治集团中做什么的迹象，然后对我们进行攻击，我们必须首先发起打击！"
+ BLR_ukraine_campaign_border_prepare: "强化与乌克兰的边境"
+ BLR_ukraine_campaign_border_prepare_desc: "尽管我们正在进攻，但我们还是要考虑到可能发生的情况，所以我们会在边境准备防御工事。"
+ BLR_ukraine_campaign_war: "开始乌克兰战役"
+ BLR_ukraine_campaign_war_desc: "我们的军队已经准备好了！向基辅前进！"
+ BLR_military_nazbol: "军工投资"
+ BLR_military_nazbol_desc: "我们的军工还没有恢复到苏联时代的水平，我们必须解决这个问题。"
+ BLR_anti_baltic_idea: "反波罗的海主义"
+ BLR_anti_ukraine_idea: "反乌克兰主义"
