--- a/localisation/simp_chinese/MD_money_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_money_l_simp_chinese.yml
@@ -647,3 +647,6 @@
  BLR_oil_sov_positive_income_loc: "$$[?additional_income_BLR_oil_sov_positive|+3]支付§Y[BLR.GetFlag]白俄罗斯§!的能源合同\n"
  BLR_oil_russian_expense_loc: "$$[?additional_expense_BLR_oil_russian|-3]支付[SOV.GetFlag]§Y俄罗斯§!的能源\n"
  BLR_oil_russian_positive_expense_loc: "$$[?additional_expense_BLR_oil_russian_positive|-3]支付[SOV.GetFlag]§Y俄罗斯§!的能源\n"
+ bankruptcy.14.t: "[FROM.GetNameDef]否认了他们的债务！"
+ bankruptcy.14.d: "一年以前，[FROM.GetNameDef]宣布他们将无法偿还债务，并开始了拖欠债务的程序。通过安排，他们打算偿还或清偿所拖欠的债务。然而，他们并没有找到解决办法，而是简单地把旧债一笔勾销，无意寻找某种方式来弥补。由于我们的政府与他们的政府关系密切，这使得他们的债主开始转向我们追偿。我们别无选择，只能补偿[FROM.GetName]所欠的至少部分款项。这对我们的经济不利，但至少这给了我们对[FROM.GetName]的影响力。"
+ bankruptcy.14.a: "也许领导层需要改变"
