--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -665,8 +665,8 @@
  IRQ.Nat_Autocracy: "£IRQ_armed_forces 伊拉克武装部队"
  IRQ.Nat_Autocracy_icon: "£IRQ_Nat_Autocracy_small"
  IRQ.Nat_Autocracy_desc: "军政府 - 伊拉克武装部队成立于1930年代初，参与了各种政治活动，包括推翻哈希姆王朝的政变."
- IRQ.Nat_Populism: "£IRQ_Nat_Autocracy_small 阿拉伯复兴社会党 - 伊拉克地区"
- IRQ.Nat_Populism_desc: "复兴党 - 伊拉克阿拉伯社会复兴党于1968年通过军事政变上台。该党原与泛阿拉伯主义的叙利亚复兴党同属一个政党，伊拉克支部以伊拉克民族主义为核心意识形态，分裂演变为“伊拉克复兴党”。叙利亚支持伊朗对抗伊拉克的血海深仇。在萨达姆·侯赛因的领导下，它推动了基于专制主义和日益伊斯兰化的先前世俗国家的军国主义“大美索不达米亚”的复兴。"
+ IRQ.Nat_Populism: "£IRQ_sardist 萨德尔运动"
+ IRQ.Nat_Populism_desc: "伊拉克民族主义 - 萨德尔公正党。萨德尔运动是一个具有民粹主义和民族主义价值观的什叶派政治运动。虽然其萨德尔民兵得到了伊朗的支持，但它寻求摆脱任何外国势力的统治。"
  IRQ.Monarchist: "£IRQ_monarch 哈希姆王室"
  IRQ.Monarchist_desc: "君主主义 - 伊拉克哈希姆王朝从1921年到1958年统治伊拉克，后被军队推翻。目前，家族首领的头衔由拉阿德·本·扎伊德担任。"
  KOR.Western_Autocracy: "£generic_Western_Autocracy_small 民主共和党"
@@ -1968,8 +1968,8 @@
  ALG.Neutral_Communism_desc: "共产主义派 - 工人党是一个左翼托洛茨基主义的阿尔及利亚政党。它成立于1990年，倡导保护和促进阿尔及利亚的工会，以及更好地分配财富。其秘书长露伊莎·哈努娜是2004年阿尔及利亚首位女性总统竞选人。自1997年以来，该党一直保持在国民议会前8名的位置，2007年以5.08%的得票率位居第四。"
  ALG.Nat_Populism: "£generic_Nat_Populism_small 正义与发展阵线"
  ALG.Nat_Populism_desc: "右翼民粹主义派 - 正义与发展阵线是阿尔及利亚的一个伊斯兰政党。它是右翼民族主义者，遵循伊斯兰民主。它的灵感来自土耳其的正义与发展党。它在2017年与复兴党的选举联盟中取得成功，他们获得了3.7%的选票"
- ALG.Nat_Fascism: "£generic_Nat_Fascism_small 新黎明"
- ALG.Nat_Fascism_desc: "法西斯主义派 - 新黎明是阿尔及利亚的民族主义和保守党。它成立于2012年，在同年的选举中获得5个席位，但在下一次选举中又失去了4个席位。"
+ ALG.Nat_Fascism: "£IRQ_Nat_Autocracy_small 阿尔及利亚阿拉伯复兴社会党"
+ ALG.Nat_Fascism_desc: ""
  ALG.Nat_Autocracy: "£generic_Nat_Autocracy_small 阿尔及利亚人民国家武装力量"
  ALG.Nat_Autocracy_desc: "军政府 - 国家人民军是阿尔及利亚的武装力量。自1962年阿尔及利亚独立以来，它在政治上发挥了重要作用。它实际上控制了政府，直到1988年建立了多党制。不过，它仍然对阿尔及利亚的政治产生影响，最近的例子是总统阿卜杜勒-阿齐兹·布特弗利卡在抗议导致失去军方支持后于2019年退位。"
  AQY.Caliphate: "£generic_Caliphate_small 阿拉伯半岛的基地组织"
@@ -3725,14 +3725,13 @@
  LEB.Communist-State_desc: ""
  LEB.Conservative: "£LEB_reactionism 联盟党"
  LEB.Conservative_desc: ""
- LEB.Autocracy: "£generic_Autocracy_small 承诺党"
+ LEB.Autocracy: "£SYR_Autocracy 阿拉伯复兴社会党"
  LEB.Autocracy_desc: ""
  LEB.Vilayat_e_Faqih: "£generic_Vilayat_e_Faqih_small 真主党"
  LEB.Vilayat_e_Faqih_desc: ""
  LEB.Mod_Vilayat_e_Faqih: "£LEB_moderate_shiite_revolutionary 阿迈勒运动"
  LEB.Mod_Vilayat_e_Faqih_desc: ""
- LEB.anarchist_communism: "£SYR_Autocracy 阿拉伯复兴社会党"
- LEB.anarchist_communism_icon: "£SYR_Autocracy"
+ LEB.anarchist_communism: "£generic_anarchist_communism_small 承诺党"
  LEB.anarchist_communism_desc: ""
  LEB.Caliphate: "£generic_Caliphate_small 安萨尔联盟"
  LEB.Caliphate_desc: ""
@@ -3756,9 +3755,9 @@
  LEB.Neutral_green_desc: ""
  LEB.Nat_Autocracy: "£LEB_military_junta 黎巴嫩武装力量"
  LEB.Nat_Autocracy_desc: ""
- LEB.Nat_Fascism: "£LEB_fascism 叙利亚社会民族党（黎巴嫩）"
+ LEB.Nat_Fascism: "£IRQ_Nat_Autocracy_small 社会主义黎巴嫩阿拉伯先锋党"
  LEB.Nat_Fascism_desc: ""
- LEB.Nat_Populism: "£LEB_right_wing_populism 长枪党"
+ LEB.Nat_Populism: "£LEB_fascism 叙利亚民族社会主义党（黎巴嫩）"
  LEB.Nat_Populism_desc: ""
  LEB.Monarchist: "£generic_Monarchist_small 谢哈布王朝"
  LEB.Monarchist_desc: ""
@@ -4677,9 +4676,6 @@
  SUD.liberalism_desc: ""
  SUD.Communist-State: "£generic_Communist_State_small 苏丹共产党"
  SUD.Communist-State_desc: ""
- SUD.Nat_Populism: "£IRQ_Nat_Autocracy_small 苏丹复兴党"
- SUD.Nat_Populism_icon: "£IRQ_Nat_Autocracy_small"
- SUD.Nat_Populism_desc: ""
  SUD.Caliphate: "£generic_Caliphate_small 伊斯兰解放党"
  SUD.Caliphate_desc: ""
  SUD.Neutral_Muslim_Brotherhood: "£SUD_Autocracy_small 国民大会"
@@ -4723,7 +4719,6 @@
  SYR.Conservative: "£generic_Conservative_small 阿拉伯民主党"
  SYR.oligarchism: "£generic_oligarchism_small 阿拉伯民主党"
  SYR.Western_Autocracy_Alternative: "£generic_Western_Autocracy_small 阿拉伯民主党"
- SYR.Nat_Populism_Alternative: "£generic_Nat_Populism_small 阿拉伯民主党"
  SYR.Western_Autocracy: "£SYR_Western_Autocracy 叙利亚改革党"
  SYR.Western_Autocracy_icon: "£SYR_Western_Autocracy"
  SYR.Western_Autocracy_desc: "叙利亚改革党是一个总部设在美国的小型政党和游说团体"
@@ -4759,11 +4754,10 @@
  SYR.neutral_Social_desc: "民主社会主义统一党是叙利亚的一个政党。它是合法许可政党民族进步阵线的一部分，支持政府的社会主义和阿拉伯民族主义方向，并接受复兴党的领导"
  SYR.Neutral_Communism: "£generic_Neutral_Communism_small 人民意志党"
  SYR.Neutral_Communism_desc: "人民意志党是由被驱逐的叙利亚共产党员组成的政党。在组织上，人民意志党遵循民主集中制。然而，它没有秘书长的任务;它只是一个秘书长。相反，在大会中选出的中央委员会成员的集体领导统治着党。中央委员会选举主席团成员和秘书处成员承担日常工作"
- SYR.Nat_Populism: "£generic_Nat_Populism_small 全国宣誓运动"
- SYR.Nat_Populism_desc: "全国宣誓运动是叙利亚的一个民族主义政党。它是政党民族进步阵线的一部分，支持执政的复兴党的方向。该党信奉阿拉伯民族主义，该党的目标是在政治、经济和社会多元化以及全民参与决策的民主基础上促进叙利亚民族团结和社会和平"
- SYR.Nat_Fascism: "£SYR_Nat_Fascism 叙利亚社会民族主义党"
- SYR.Nat_Fascism_icon: "£SYR_Nat_Fascism"
- SYR.Nat_Fascism_desc: "叙利亚社会民族主义党是一个在黎巴嫩、叙利亚、约旦、伊拉克和巴勒斯坦活动的民族主义政党。它主张建立一个跨越新月沃地的叙利亚民族国家，包括今天的叙利亚、黎巴嫩、伊拉克、科威特、约旦、巴勒斯坦、以色列、塞浦路斯、西奈半岛、土耳其东南部，基于地理边界和边界内的共同历史人民 分享。它拥有超过100,000名成员，是叙利亚第二大合法政治团体，仅次于执政的阿拉伯社会主义复兴党。在黎巴嫩，它是该国政治史上80多年来主要的世俗和高度组织化的精英政党。"
+ SYR.Nat_Populism: "£SYR_Nat_Fascism 叙利亚社会民族党"
+ SYR.Nat_Populism_desc: "叙利亚社会民族主义党是一个在黎巴嫩、叙利亚、约旦、伊拉克和巴勒斯坦活动的民族主义政党。它主张建立一个横跨新月沃土的叙利亚民族国家，包括今天的叙利亚、黎巴嫩、伊拉克、科威特、约旦、巴勒斯坦、以色列、塞浦路斯、西奈半岛、土耳其东南部，基于地理边界和边境内人民共享的共同历史。它拥有超过10万名成员，是叙利亚第二大合法政治团体，仅次于执政的阿拉伯复兴社会党。在黎巴嫩，它80多年来一直是该国政治史上主要的世俗和组织严密的精英政党。"
+ SYR.Nat_Fascism: "£generic_Nat_Populism_small 民族协约党"
+ SYR.Nat_Fascism_desc: "民族协约党是叙利亚的一个民族主义政党。它是支持执政党复兴党方向的政党民族进步阵线的一部分。该党信奉阿拉伯民族主义，该党的目标是在政治、经济和社会多元化以及全民参与决策的民主基础上促进叙利亚民族团结和社会和平。"
  SYR.Nat_Autocracy: "£SYR_Nat_Autocracy 叙利亚阿拉伯武装力量"
  SYR.Nat_Autocracy_icon: "£SYR_Nat_Autocracy"
  SYR.Nat_Autocracy_desc: ""
@@ -5304,8 +5298,8 @@
  LEB.Neutral_Libertarian_icon: "£LEB_libertarianism"
  LEB.Neutral_Communism_icon: "£LEB_non_aligned_communism"
  LEB.Nat_Autocracy_icon: "£LEB_military_junta"
- LEB.Nat_Fascism_icon: "£LEB_fascism"
- LEB.Nat_Populism_icon: "£LEB_right_wing_populism"
+ LEB.Nat_Fascism_icon: "£IRQ_Nat_Autocracy_small"
+ LEB.Nat_Populism_icon: "£LEB_fascism"
  COM.conservatism: "£COM_western_conservative 奥兰治"
  COM.conservatism_icon: "£COM_western_conservative"
  COM.conservatism_desc: ""
@@ -5471,8 +5465,8 @@
  TUR.oligarchism_mafia_desc: "土耳其黑帮 - 土耳其黑帮长期以来一直参与土耳其政治和日常生活。众所周知，他们在土耳其领土内外从事犯罪活动。通常，他们的外部业务在西欧进行，但众所周知，他们也在其他地方开展业务。\n\n该党于军方的§Y地位§!：§R-25§!"
  ROJ.conservatism_icon: "£ROJ_conservatism_small"
  ROJ.neutral_Social_icon: "£ROJ_neutral_Social_small"
- IRQ.Neutral_conservatism: "£IRQ_sardist 萨德尔运动"
- IRQ.Neutral_conservatism_desc: "伊拉克民族主义 - 伊拉克萨德尔派公正党及其运动是一个具有民粹主义和民族主义价值观的什叶派政治运动。尽管萨德尔派民兵得到了伊朗的支持，但该运动追求摆脱任何外国势力的统治的自由。"
+ IRQ.Neutral_conservatism: "£generic_Neutral_conservatism_small 保守派"
+ IRQ.Neutral_conservatism_desc: ""
  PER.socialism_icon: "£PER_socialism"
  PER.hardline_totalitarian: "£generic_Vilayat_e_Faqih_small 伊朗共和党"
  PER.hardline_totalitarian_desc: ""
@@ -7570,3 +7564,25 @@
  UKR.Mod_Vilayat_e_Faqih_desc: ""
  UKR.Caliphate: ""
  UKR.Caliphate_desc: ""
+ IRQ.Nat_Fascism: "£IRQ_Nat_Autocracy_small 伊拉克复兴党"
+ IRQ.Nat_Fascism_desc: "复兴党 - 伊拉克阿拉伯社会主义复兴党于1968年通过军事政变上台。该党原与泛阿拉伯主义的叙利亚复兴党同属一个政党，伊拉克支部以伊拉克民族主义为核心意识形态， 分裂演变成一场血海深仇，叙利亚支持伊朗对抗伊拉克。在萨达姆·侯赛因的领导下，它推动了基于专制主义和日益伊斯兰化的先前世俗国家的军国主义“大美索不达米亚”的复兴。"
+ LEB.Autocracy_icon: "£SYR_Autocracy"
+ MAU.Autocracy: "£generic_Autocracy_small 社会民主统一党"
+ MAU.Autocracy_desc: ""
+ MAU.Nat_Fascism: "£generic_Nat_Fascism_small 民族先锋党"
+ MAU.Nat_Fascism_desc: ""
+ PAL.Autocracy: "£generic_Autocracy_small 闪电突击队"
+ PAL.Autocracy_icon: "£generic_Autocracy_small"
+ PAL.Autocracy_desc: ""
+ PAL.Nat_Fascism: "£IRQ_Nat_Autocracy_small 阿拉伯解放阵线"
+ PAL.Nat_Fascism_icon: "£IRQ_Nat_Autocracy_small"
+ PAL.Nat_Fascism_desc: ""
+ SUD.Autocracy: "£generic_Autocracy_small 阿拉伯复兴社会党 - 苏丹组织"
+ SUD.Autocracy_desc: ""
+ SUD.Nat_Fascism: "£IRQ_Nat_Autocracy_small 阿拉伯复兴社会党 - 苏丹地区"
+ SUD.Nat_Fascism_icon: "£IRQ_Nat_Autocracy_small"
+ SUD.Nat_Fascism_desc: ""
+ SYR.Nat_Fascism_Alternative: "£generic_Nat_Populism_small 阿拉伯民主党"
+ SYR.Nat_Populism_icon: "£SYR_Nat_Fascism"
+ YEM.Nat_Fascism: "£IRQ_Nat_Autocracy_small 国家阿拉伯社会主义复兴党"
+ YEM.Nat_Fascism_desc: ""
