--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -2111,7 +2111,7 @@
  ENG_SP_R_arty_3: "多管制导火箭系统"
  ENG_SP_R_arty_4: "多管制导火箭系统"
  ENG_SP_Anti_Air_0: "神枪酋长"
- ENG_SP_Anti_Air_1: "追踪长剑"
+ ENG_SP_Anti_Air_1: "轻剑"
  ENG_SP_Anti_Air_2: "星光"
  ENG_SP_Anti_Air_3: "M1127 斯特赖克 钢弩"
  ENG_SP_Anti_Air_4: "蝎式 SRLS"
