--- a/localisation/simp_chinese/factions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/factions_l_simp_chinese.yml
@@ -182,3 +182,4 @@
  fia_offer_join_faction_rule_tt: "§R只有前苏联国家可以被邀请加入自由独立联盟！§!"
  REP_member: "红色欧洲条约成员国"
  polish_pact: "红色欧洲条约"
+ UAR_arab_liberation_front: "阿拉伯解放阵线"
