--- a/localisation/english/MD_countries_cosmetic_l_english.yml
+++ b/localisation/english/MD_countries_cosmetic_l_english.yml
@@ -3781,3 +3781,117 @@
  RYU_USA_neutrality_DEF: "The Government of the Ryukyu Islands"
  RYU_USA_nationalist: "Government of The Ryukyu Islands"
  RYU_USA_nationalist_DEF: "The Government of the Ryukyu Islands"
+ 
+ #UAR related
+ UAR_democratic: "Arab Federation"
+ UAR_democratic_DEF: "the Arab Federation"
+ UAR_democratic_ADJ: "Arab"
+ UAR_communism: "Federation of Arab Republics"
+ UAR_communism_DEF: "the Federation of Arab Republics"
+ UAR_communism_ADJ: "Arab"
+ UAR_fascism: "Arab Islamic Republic"
+ UAR_fascism_DEF: "the Arab Islamic Republic"
+ UAR_fascism_ADJ: "Arab"
+ UAR_neutrality: "United Arab States"
+ UAR_neutrality_DEF: "the United Arab States"
+ UAR_neutrality_ADJ: "Arab"
+ UAR_nationalist: "United Arab Republic"
+ UAR_nationalist_DEF: "the United Arab Republic"
+ UAR_nationalist_ADJ: "Arab"
+
+ MAU_autonomy_uar_state: "State of Mauritania"
+ MAU_autonomy_uar_province: "Mauritanian Province"
+ MAU_autonomy_uar_regional_command: "Mauritanian Ba'athist Regional Command"
+ MOR_autonomy_uar_state: "State of Morocco"
+ MOR_autonomy_uar_province: "Moroccan Province"
+ MOR_autonomy_uar_regional_command: "Moroccan Ba'athist Regional Command"
+ SHA_autonomy_uar_state: "State of West Sahara"
+ SHA_autonomy_uar_province: "West Saharan Province"
+ SHA_autonomy_uar_regional_command: "West Saharan Ba'athist Regional Command"
+ ALG_autonomy_uar_state: "State of Algeria"
+ ALG_autonomy_uar_province: "Algerian Province"
+ ALG_autonomy_uar_regional_command: "Algerian Ba'athist Regional Command"
+ TUN_autonomy_uar_state: "State of Tunisia"
+ TUN_autonomy_uar_province: "Tunisian Province"
+ TUN_autonomy_uar_regional_command: "Tunisian Ba'athist Regional Command"
+ LBA_autonomy_uar_state: "State of Libya"
+ LBA_autonomy_uar_province: "Libyan Province"
+ LBA_autonomy_uar_regional_command: "Libyan Ba'athist Regional Command"
+ EGY_autonomy_uar_state: "State of Egypt"
+ EGY_autonomy_uar_province: "Egyptian Province"
+ EGY_autonomy_uar_regional_command: "Egyptian Ba'athist Regional Command"
+ SUD_autonomy_uar_state: "State of Sudan"
+ SUD_autonomy_uar_province: "Sudanese Province"
+ SUD_autonomy_uar_regional_command: "Sudanese Ba'athist Regional Command"
+ PAL_autonomy_uar_state: "State of Palestine"
+ PAL_autonomy_uar_province: "Palestinian Province"
+ PAL_autonomy_uar_regional_command: "Palestinian Ba'athist Regional Command"
+ HAM_autonomy_uar_state: "State of Gaza"
+ HAM_autonomy_uar_province: "Gazan Province"
+ HAM_autonomy_uar_regional_command: "Gazan Ba'athist Regional Command"
+ JOR_autonomy_uar_state: "State of Jordan"
+ JOR_autonomy_uar_province: "Jordanian Province"
+ JOR_autonomy_uar_regional_command: "Jordanian Ba'athist Regional Command"
+ LEB_autonomy_uar_state: "State of Lebanon"
+ LEB_autonomy_uar_province: "Lebanese Province"
+ LEB_autonomy_uar_regional_command: "Lebanese Ba'athist Regional Command"
+ HEZ_autonomy_uar_state: "State of Jabal Amil"
+ HEZ_autonomy_uar_province: "Jabal Amil Province"
+ HEZ_autonomy_uar_regional_command: "Jabal Amil Ba'athist Regional Command"
+ SYR_autonomy_uar_state: "State of Syria"
+ SYR_autonomy_uar_province: "Syrian Province"
+ SYR_autonomy_uar_regional_command: "Syrian Ba'athist Regional Command"
+ FSA_autonomy_uar_state: "State of Syria"
+ FSA_autonomy_uar_province: "Syrian Province"
+ FSA_autonomy_uar_regional_command: "Syrian Ba'athist Regional Command"
+ NUS_autonomy_uar_state: "State of Syria"
+ NUS_autonomy_uar_province: "Syrian Province"
+ NUS_autonomy_uar_regional_command: "Syrian Ba'athist Regional Command"
+ DRU_autonomy_uar_state: "State of Jabal Al-Druze"
+ DRU_autonomy_uar_province: "Jabal Al-Druze Province"
+ DRU_autonomy_uar_regional_command: "Jabal Al-Druze Ba'athist Regional Command"
+ ALA_autonomy_uar_state: "State of Latakia"
+ ALA_autonomy_uar_province: "Latakian Province"
+ ALA_autonomy_uar_regional_command: "Latakian Ba'athist Regional Command"
+ ISI_autonomy_uar_state: "State of Mesopotamia"
+ ISI_autonomy_uar_province: "Mesopotamian Province"
+ ISI_autonomy_uar_regional_command: "Mesopotamian Ba'athist Regional Command"
+ ISQ_autonomy_uar_state: "State of Iraq"
+ ISQ_autonomy_uar_province: "Iraqi Province"
+ ISQ_autonomy_uar_regional_command: "Iraqi Ba'athist Regional Command"
+ KUW_autonomy_uar_state: "State of Kuwait"
+ KUW_autonomy_uar_province: "Kuwaiti Province"
+ KUW_autonomy_uar_regional_command: "Kuwaiti Ba'athist Regional Command"
+ SAU_autonomy_uar_state: "State of Arabia"
+ SAU_autonomy_uar_province: "Arabian Province"
+ SAU_autonomy_uar_regional_command: "Arabian Ba'athist Regional Command"
+ HEJ_autonomy_uar_state: "State of Hejaz"
+ HEJ_autonomy_uar_province: "Hejazi Province"
+ HEJ_autonomy_uar_regional_command: "Hejazi Ba'athist Regional Command"
+ NEJ_autonomy_uar_state: "State of Nejd"
+ NEJ_autonomy_uar_province: "Nejdi Province"
+ NEJ_autonomy_uar_regional_command: "Nejdi Ba'athist Regional Command"
+ QTF_autonomy_uar_state: "State of Qatif"
+ QTF_autonomy_uar_province: "Qatifi Province"
+ QTF_autonomy_uar_regional_command: "Qatifi Ba'athist Regional Command"
+ BHR_autonomy_uar_state: "State of Bahrain"
+ BHR_autonomy_uar_province: "Bahraini Province"
+ BHR_autonomy_uar_regional_command: "Bahraini Ba'athist Regional Command"
+ QTR_autonomy_uar_state: "State of Qatar"
+ QTR_autonomy_uar_province: "Qatari Province"
+ QTR_autonomy_uar_regional_command: "Qatari Ba'athist Regional Command"
+ UAE_autonomy_uar_state: "State of the Gulf"
+ UAE_autonomy_uar_province: "the Gulf Province"
+ UAE_autonomy_uar_regional_command: "the Gulf Ba'athist Regional Command"
+ OMA_autonomy_uar_state: "State of Oman"
+ OMA_autonomy_uar_province: "Omani Province"
+ OMA_autonomy_uar_regional_command: "Omani Ba'athist Regional Command"
+ YEM_autonomy_uar_state: "State of Yemen"
+ YEM_autonomy_uar_province: "Yemeni Province"
+ YEM_autonomy_uar_regional_command: "Yemeni Ba'athist Regional Command"
+ HOU_autonomy_uar_state: "State of Yemen"
+ HOU_autonomy_uar_province: "Yemeni Province"
+ HOU_autonomy_uar_regional_command: "Yemeni Ba'athist Regional Command"
+ AQY_autonomy_uar_state: "State of Yemen"
+ AQY_autonomy_uar_province: "Yemeni Province"
+ AQY_autonomy_uar_regional_command: "Yemeni Ba'athist Regional Command"
