--- a/localisation/english/MD_custom_achievements_l_english.yml
+++ b/localisation/english/MD_custom_achievements_l_english.yml
@@ -167,6 +167,16 @@
  form_the_baltic_states_DESC: "Form the Baltic States as Estonia, Latvia, or Lithuania."
  unite_the_nordic_people_NAME: "Form Scandinavia"
  unite_the_nordic_people_DESC: "Form Scandinavia as Sweden, Denmark, Norway, or Finland."
+ u_ar_great_NAME: "U AR Great"
+ u_ar_great_DESC: "Unite either the United Arab Republic or the Federation of Arab Republics"
+ lawrence_of_arabia_NAME: "Lawrence of Arabia"
+ lawrence_of_arabia_DESC: "As the United Kingdom, send volunteers to the United Arab Republic or the Federation of Arab Republics"
+ technically_everyone_is_an_arab_NAME: "In fact, anyone outside of America is technically an A-rab"
+ technically_everyone_is_an_arab_DESC: "As the United Arab Republic or the Federation of Arab Republics, be the only country in addition to the United States to exist"
+ are_you_sure_thats_enough_NAME: "Are You Sure That's Enough?"
+ are_you_sure_thats_enough_DESC: "Control at least 90% of Arab GDP before unifying the Arabs"
+ i_hate_arabs_NAME: "But In The Interest of Full Disclosure, I have to say, I hate A-rabs"
+ i_hate_arabs_DESC: "Defeat the United Arab Republic or the Federation of Arab Republics in a war"
 
  #Tooltips
  eu_achievement_tt: "Is a Current or Potential @EUU §YEuropean Union§! Nation"
