--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -906,19 +906,7 @@
  BLR_kalinovsky_regiment_desc: "Kastus Kalinovsky Regiment is a volunteer regiment formed to protect the territorial integrity of Ukraine, in particular the city of Kyiv, from Russian invasion."
  BLR_true_political_and_national_freedom: "True Political Freedom"
  BLR_true_political_and_national_freedom_desc: "Beginning of true political freedom is to recover from the devastation that occurred during our purge within the country. It is time to move forward and attain what our people truly desire."
- BLR_belarussia: "The Way of Belarussia"
- BLR_belarussia_desc: "We believe that our country has a special path, the Russian way, which apparently has been forgotten in the Kremlin. We will return the greatness of the Russian nation"
- BLR_Belarussia_claims: "Belarusian Territorial Claims"
- BLR_Belarussia_claims_desc: "Our fellow citizens live in many territories adjacent to us, we must return them to their homeland"
- BLR_soldiers_from_rus: "Retired Russian Military"
- BLR_soldiers_from_rus_desc: "We are ready to recruit a lot of retired military personnel from Russia."
- BLR_military_politics: "State Militarism"
- BLR_military_politics_desc: "Our country needs a strong arm, a strong military industry and a strong army. We'll give it all to her."
- BLR_military_invest: "Investments in The Military Industry"
- BLR_military_invest_desc: "Our country needs factories that will create new armored vehicles by the dozens."
- BLR_military_new_generations: "New Generation of Soldiers"
- BLR_military_new_generations_desc: "We will educate a new generation of soldiers in the ideals of militarism and love for their country."
- 
+  
  BLR_Taler_ruble: "Belarusian Taler"
  BLR_Taler_ruble_desc: "We must get rid of the ruble completely, replacing it with our new currency."
  BLR_National_science: "Scientific And Economic Growth"
@@ -931,8 +919,10 @@
  BLR_millitarism_desc: "Our people have suffered enough humiliation from their neighbors; only a strong and warlike nation can survive."
  BLR_third_chechen_war: "The Third Chechen War in Russia"
  BLR_third_chechen_war_desc: "Chechens have long been living under the oppression of the Russians, it's time to help them throw off the shackles of the rule of the Russian government"
- BLR_attack_russian_bear: "Finish off the Russian bear"
+ BLR_attack_russian_bear: "Finish off the Russian Bear"
  BLR_attack_russian_bear_desc: "Finally, our main enemy will be destroyed"
+ BLR_zmagar_army: "Army Reform"
+ BLR_zmagar_army_desc: "Our army needs urgent reform, while we were busy with the socio-political reform of our country, our armed forces were seriously weakened"
  BLR_Young_Front: "Young Front"
  BLR_Young_Front_desc: "The Young Front is an international youth movement of Belarusian youth. Is a youth opposition organization of Belarus"
  BLR_south_river_battalion: "South River Battalion"
@@ -2112,13 +2102,13 @@
  belarus_another.19.a: "Our country is weakened, I think we should agree"
  belarus_another.19.b: "Our independence is our everything"
 
- belarus_another.20.t: "Signing the Contract"
- belarus_another.20.d: "The Polish government agreed to unite with us in a Union State, with the loss of part of its autonomy to protect its country from complete collapse. But this can lead to unforeseen consequences"
+ belarus_another.20.t: "Signing the Union"
+ belarus_another.20.d: "The Polish government has agreed to create a union with us! This is a victory for the entire Belarusian people!"
  belarus_another.20.a: "Well, we'll see"
 
  belarus_another.21.t: "Poland Refused!"
  belarus_another.21.d: "The Polish government, which we have nurtured for so long, has betrayed us. Apparently we have no choice and we have to decide for ourselves what we will do with these traitors. We may have to use all the available leverage"
- belarus_another.21.a: "Let's make hell for the Poles"
+ belarus_another.21.a: "Let's Make Hell For The Poles"
  belarus_another.21.b: "Let's leave them"
 
  belarus_another.22.t: "Silesian Militia"
