new historical tanks

--- a/localisation/english/MD_decisions_l_english.yml
+++ b/localisation/english/MD_decisions_l_english.yml
@@ -1014,6 +1014,9 @@
  historical_tanks_category: "Historical AFV Designs"
  historical_tanks_category_desc: ""
  t90_m_decision: "Create T-90M Design"
+ t72b3_decision: "Create T-72B3 Design"
+ t72b3_m2016_decision: "Create T-72B3m2016 Design"
+ t80bvm_decision: "Create T-80BVM Design"
  t14_decision: "Create T-14 Design"
  t14_152_decision: "Create T-14/152 Design"
  t15_decision: "Create T-15 Design"
