--- a/localisation/english/MD_focus_JAP_l_english.yml
+++ b/localisation/english/MD_focus_JAP_l_english.yml
@@ -1288,6 +1288,11 @@
  JAP_expand_tpp: "TPP Initiative"
  JAP_tpp_and_ttip: "Link to the Atlantic Nations"
 
+#-----------------------------------------------------------------
+#DIPLOMACY CONTINUATION
+#-----------------------------------------------------------------
+JAP_approach_russia: "Approaching Russia"
+
  #----------------------------------------------------------------
  #OKINAWA POLICY
  #----------------------------------------------------------------
