--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -900,8 +900,8 @@
  BLR_GDL_desc: "It is time to return the great state of the Litvinovs. Finally, our people will not be under the yoke of a superpower; they will have the opportunity to become a superpower themselves."
  BLR_help_silesians: "Help Silesian Separatists"
  BLR_help_silesians_desc: "Divide and rule is the main principle that we will use in our policy towards Poland. When the hot phase of the Poles' transition under our control begins, the Silesians may facilitate our conquest of this country."
- BLR_revansh_return: "Revive the Right Revenge"
- BLR_revansh_return_desc: "The Right Revenge was a nationalist organization of the 90s, which professed anti-Polish and anti-Russian rhetoric and also convinced that it was necessary to create paramilitary organizations in the manner of Ukrainian ones"
+ BLR_revansh_return: "Revive the Praviy Revansh"
+ BLR_revansh_return_desc: "The Praviy Revansh was a nationalist organization of the 90s, which professed anti-Polish and anti-Russian rhetoric and also convinced that it was necessary to create paramilitary organizations in the manner of Ukrainian ones"
  BLR_blackcat: "Revive the Black Cat"
  BLR_blackcat_desc: "The Black Cat was a large partisan organization in the territory of Belarus for 40 years, which fought for its independence against the Soviet government. Their methods will perfectly help us defend against the invasion of enemies"
  BLR_lith_again: "Back to Zemaitija"
@@ -1042,8 +1042,10 @@
  BLR_white_legion_battalion_create: "Create A Battalion of the White Legion"
  BLR_white_legion_recruit_youngfront: "Recruit Graduates of the Young Front"
  BLR_white_legion_recruit_people: "Recruit Loyal Citizens"
+ BLR_white_legion_recruit_revansh: "Recruit Members of the "Praviy Revansh" organization"
  BLR_white_legions_TT: "Number of recruits will change by §Y[?modify_white_legion]§!\n"
  BLR_whitelegion_recruit_2000: "Number of available recruits is 2000"
+ 
 
  BLR_lith_revol_category: "Lithiania Revolution"
  BLR_Establish_cooperation_lit: "Establish Cooperation With Lithuanian Communists"
@@ -1464,7 +1466,7 @@
  BLR_Young_Front: "Young Front"
  BLR_white_legion: "White Legion"
  BLR_blackkcat: "Black Cat"
- BLR_revanshh: "Right Revenge"
+ BLR_revanshh: "Praviy Revansh"
  BLR_Russofobia: "Anti-Russian Policy"
  BLR_Denied_Rus_Language: "Denied Russian language"
  BLR_patriotism: "Patriotism"
