--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -915,6 +915,8 @@
  BLR_Taler_ruble_desc: "We must get rid of the ruble completely, replacing it with our new currency."
  BLR_National_science: "Scientific And Economic Growth"
  BLR_National_science_desc: "We will begin to develop our own science and economy as an independent state."
+ BLR_create_nationalsecurity: "Create New Departments"
+ BLR_create_nationalsecurity_desc: "Instead of the legacy of the USSR in the form of the KGB, we will create two new structures - the National Security Service and the National Intelligence Service."
  BLR_Delete_KGB: "Dissolve the KGB"
  BLR_Delete_KGB_desc: "The KGB should be abolished and replaced by a new structure."
  BLR_Reform_Police: "Police Reform"
@@ -1459,8 +1461,8 @@
  BLR_BRSM1: "BRSM"
  BLR_Poles_goes: "Poles Leaving Belarus"
  BLR_Internet_Cencorship: "Internet Censorship"
- BLR_National_Security_Service: "Belarusian Bureau of Investigation"
- BLR_National_Security_Service_desc: "Purpose of this bureau is to investigate the crimes of the Soviet government"
+ BLR_National_Security_Service: "National Security Service"
+ BLR_National_Intelligence_Service: "National Intelligence Service"
  BLR_taler: "Taler"
  BLR_support_nationalism: "Support Nationalism"
  BLR_Young_Front: "Young Front"
