--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -1334,6 +1334,12 @@
  SOV_crush_cult_of_stalin: "Condemn Cult of Stalin"
  SOV_crush_cult_of_stalin_desc: "A lot of our fellow countrymen still believe that Stalin was the greatest leader in history of Russia. We must crush this cult and make Russian people believe in our current and future leaders!"
 
+ #Ideas
+ SOV_rostech_idea: "Rostech"
+ SOV_kbp_idea: "KBP Instrument Design Bureau"
+ SOV_rosoboronprom_idea: "Oboronprom"
+ SOV_kalashnikov_idea: "Kalashnikov Concern"
+
  ###Events
  #Events Governorates
  russia_governorate.1.t: "Completion of Integration of Dagestan Governorate"
