Fixed Indian event

--- a/localisation/english/MD_focus_RAJ_l_english.yml
+++ b/localisation/english/MD_focus_RAJ_l_english.yml
@@ -138,6 +138,12 @@
  indian_event.6.d: "Since the recent Indian alignment with us, they ask us to revoke Major Non-NATO ally status from Pakistan."
  indian_event.6.a: "Sure!"
  indian_event.6.b: "Sorry, no."
+ indian_event.667.t: "U.S. Agrees."
+ indian_event.667.d: "They will remove MNNA Status from Pakistan."
+ indian_event.667.a: "Great!"
+ indian_event.668.t: "U.S. Denied our proposal."
+ indian_event.668.d: "Pakistan will remain a major non-nato ally of U.S."
+ indian_event.668.a: "Bruh"
  RAJ_support_taiwan: "Support Taiwan"
  RAJ_support_taiwan_desc: "Although Taiwan claims many territories that are contrary to our interests, it may be worth supporting them against a common enemy - the PRC."
  RAJ_indian_modern_prog: "Applying for USAID"
