--- a/Changelog.txt
+++ b/Changelog.txt
@@ -55,6 +55,7 @@ v1.10.0
   - Fixed display error in GDP/C tooltip
   - Fixed Malaysia being counted as a Middle Eastern nation insted of Asian in regards to power ranking
   - Removed duplicate equipment variants from Egypt
+  - Added Answer events for Indian Proposal to U.S. to remove Pakistan from MNNA list Event
 
  Content:
   - NEW TREE: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
