--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -3585,8 +3585,8 @@
 
  ### Japan ###
  ###pro-western
- JAP.Western_Autocracy: "£JAP_Western_Autocracy \"Seiwakai\" Liberal Democratic Party"
- JAP.Western_Autocracy_icon: "£JAP_Western_Autocracy"
+ JAP.Western_Autocracy: "£JAP_conservatism \"Seiwakai\" Liberal Democratic Party"
+ JAP.Western_Autocracy_icon: "£JAP_conservatism"
  JAP.Western_Autocracy_desc: "The Revisionists are the right wing of the LDP and propose a more confrontational foreign policy. They propose an adaptation of Article 9 to the global situation as well as to the regional situation. China and North Korea are a real threat to the State of Japan and we cannot rely only on the USA to provide protection. We need to take matters into our own hands and build up sufficient military capabilities in order to protect our interests. The emerging of new mega corporations in China is also challenging our economy heavily. If we don't change our policy we will lose our current position in the world."
  JAP.conservatism: "£JAP_conservatism \"Kōchikai\" Liberal Democratic Party"
  JAP.conservatism_icon: "£JAP_conservatism"
@@ -3604,8 +3604,8 @@
  JAP.Communist-State: "£JAP_Communist_State Japanese Communist Party (Authoritarian)"
  JAP.Communist-State_icon: "£JAP_Communist_State"
  JAP.Communist-State_desc: "The Emergence Wing of the JCP is an unofficial clique of hardliner communists supporting anti-Westernist policies, including cutting ties with the U.S, and a pro-Eastern outlook, including changes like a politic-diplomatic reapproachment with Russia and China."
- JAP.Conservative: "£JAP_Conservative \"Shisuikai\" Liberal Democratic Party"
- JAP.Conservative_icon: "£JAP_Conservative"
+ JAP.Conservative: "£JAP_conservatism \"Shisuikai\" Liberal Democratic Party"
+ JAP.Conservative_icon: "£JAP_conservatism"
  JAP.Conservative_desc: "The Protectionist are the left wing of the LDP and are in favor of a more economy based foreign policy. They see the rise of China as an opportunity and want to profit from it economically. Even if that means they need to confronte the USA with restrictions. If we do not cooperate with the Chinese our economy will fail and the hard work of the last generations would have been for nothing! Even though the Protectionist Faction is pacifist they are open to reinterpretate Article 9 and recognize the Self Defense Forces."
  JAP.Autocracy: "£JAP_Autocracy Revolutionary Communist League"
  JAP.Autocracy_icon: "JAP_Autocracy"
