--- a/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
@@ -842,3 +842,6 @@
  btr4_decision: "生成BTR-4设计"
  SER_rename_nation_2: "更名为塞尔维亚"
  SER_rename_nation_2_desc: "既然我们已经解散了与我们的黑山兄弟的联盟，我们的国家就没有必要保留塞尔维亚和黑山的名字了，我们现在只是塞尔维亚，就好像这个名字代表的那样。"
+ t72b3_decision: "生成T-72B3设计"
+ t72b3_m2016_decision: "生成T-72B3m2016设计"
+ t80bvm_decision: "生成T-80BVM设计"
