--- a/localisation/simp_chinese/MD_focus_ABK_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ABK_l_simp_chinese.yml
@@ -1,6 +1,6 @@
 ﻿l_simp_chinese:
  ABK_Corruption_economic: "新千年的阿布哈兹"
- ABK_Corruption_economic_desc: "我们的国家并没有以最好的状态迎接新的千年。 腐败正在侵蚀我们的国家，基础设施在战后遭到破坏，至今仍未恢复"
+ ABK_Corruption_economic_desc: "我们的国家并没有以最好的状态迎接新的千年。 腐败正在侵蚀我们的国家，基础设施在战后遭到破坏，至今仍未恢复。"
  ABK_jd_abk_russia: "恢复与俄罗斯之间的交通"
  ABK_jd_abk_russia_desc: "我们需要恢复与俄罗斯之间的运输路线，因为它是我们目前唯一的盟友和合作伙伴。"
  ABK_tourism1: "发展旅游业"
