--- a/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
@@ -909,13 +909,12 @@
  BLR_Europe_last_dictator: "欧洲最后的独裁者"
  BLR_BRSM: "布列塔尼造船厂"
  BLR_Internet_Cencorship: "互联网审查"
- BLR_National_Security_Service: "白俄罗斯调查局"
- BLR_National_Security_Service_desc: "这个局的目的是调查苏联政府的罪行"
+ BLR_National_Security_Service: "国家安全局"
  BLR_taler: "神话"
  BLR_support_nationalism: "支持民族主义"
  BLR_Young_Front: "青年阵线"
  BLR_white_legion: "白色军团"
- BLR_Russofobia: "反苏政策"
+ BLR_Russofobia: "反俄罗斯政策"
  BLR_Denied_Rus_Language: "拒绝用俄语"
  BLR_patriotism: "爱国主义"
  BLR_Belarusization: "白俄罗斯化"
@@ -1281,12 +1280,12 @@
  belarus_another.19.d: "白俄罗斯积极影响着我们的政府，并利用它进行筹码。今天，白俄罗斯大使给我们带来了一份新协定草案——根据俄国提出的卢卡斯申卡政府的提议，提议建立一个超国家实体。事实上，我们失去了一些自主权，但我们的国家正在逐步统一。我们是否同意？"
  belarus_another.19.a: "我们的国家被削弱了，我想我们应该同意"
  belarus_another.19.b: "独立就是一切。"
- belarus_another.20.t: "签署合同"
- belarus_another.20.d: "波兰政府已经同意与我们团结在一个国家，失去了部分自治权以保护其国家不受彻底崩溃的影响。但这可能会导致无法预料的后果"
+ belarus_another.20.t: "签署联盟"
+ belarus_another.20.d: "波兰政府已同意与我们建立联盟！这是整个白俄罗斯人民的胜利！"
  belarus_another.20.a: "好吧，我们拭目以待。"
  belarus_another.21.t: "波兰拒绝！"
  belarus_another.21.d: "我们培养了很长时间的波兰政府已经背叛了我们。显然我们别无选择，只能由我们自己来决定如何处理这些叛徒。我们可能必须利用所有可用的杠杆。"
- belarus_another.21.a: "让我们为波兰人下地狱吧。"
+ belarus_another.21.a: "让我们送波兰人下地狱吧。"
  belarus_another.21.b: "让我们离开他们吧。"
  belarus_another.22.t: "西里西亚民兵"
  belarus_another.22.d: "我们的人民已经得到了独立自主的机会，是时候趁机拿起武器了！"
@@ -1578,18 +1577,6 @@
  BLR_debur_desc: "压缩官员开支、减少人员，释放的资金造福人民。"
  BLR_border_pic_russia: "俄罗斯边境情景"
  BLR_border_pic_russia_desc: "在对俄罗斯采取军事行动之前，我们应该首先对该地区进行侦察。"
- BLR_belarussia: "白俄罗斯之路"
- BLR_belarussia_desc: "我们相信，我国有一条特殊的道路，即俄罗斯道路，但它显然已被克里姆林宫遗忘。我们将回报俄罗斯民族的伟大。"
- BLR_Belarussia_claims: "白俄罗斯的领土主张"
- BLR_Belarussia_claims_desc: "我们的同胞生活在与我们相邻的许多地区，我们必须让他们返回家园。"
- BLR_soldiers_from_rus: "俄罗斯退役军人"
- BLR_soldiers_from_rus_desc: "我们准备从俄罗斯招募大量退役军人。"
- BLR_military_politics: "国家军国主义"
- BLR_military_politics_desc: "我们的国家需要强大的武装、强大的军工、强大的军队。我们会把一切都给她。"
- BLR_military_invest: "军工投资"
- BLR_military_invest_desc: "我国需要能够制造数十辆新型装甲车的工厂。"
- BLR_military_new_generations: "新一代士兵"
- BLR_military_new_generations_desc: "我们要向新一代军人灌输军国主义理想、爱国主义精神。"
  BLR_PinskDrev: "注资平斯克德雷夫"
  BLR_PinskDrev_desc: "白俄罗斯木工行业的大型企业，平斯克最古老的企业。我们应该资助他们的活动，以便他们进一步发展。"
  BLR_metro_minsk: "扩建明斯克地铁"
@@ -1816,8 +1803,6 @@
  BLR_MZKT_create_TT: "§Y明斯克轮式牵引车厂决议§!现已提供底盘供应"
  BLR_peleng_create_TT: "§Y佩伦决议§!现已提供军用光学和瞄准电子设备可用"
  BLR_zavod558_create_TT: "§Y588飞机修理厂决议§!现已提供飞机维修合同"
- BLR_sar_chi_TT: "§Y白俄罗斯将成为我们的特别行政区！§!"
- BLR_sar_blr_TT: "§Y我们将成为中国的一个特别行政区！§!"
  BLR_chi_coop_mil_TT: "我们的工厂和企业将能够将产品销售给§Y朝鲜§!"
  belarus_export.3.a: "白俄罗斯武器的荣耀"
  belarus_export.6.t: "我们提议购买白俄罗斯拖拉机"
@@ -1919,12 +1904,6 @@
  belarus_another.49.t: "\"游览维尔纽斯\""
  belarus_another.49.d: "在我国边防部队的协助下，私人军事公司瓦格纳突破立陶宛边境，进入立陶宛境内。谁也没想到的事情开始了。"
  belarus_another.49.a: "夏日和弩"
- belarus_another.50.t: "白俄罗斯特别行政区"
- belarus_another.50.d: "我们在白俄罗斯的影响力如此之大，以至于我们准备宣布在这个国家的领土上建立特别行政区。"
- belarus_another.50.a: "荣耀归于中国"
- belarus_another.51.t: "白俄罗斯特别行政区"
- belarus_another.51.d: "中国在我国的影响力如此之大，以至于我们现在是他们的特区。有趣的未来等待着我们。"
- belarus_another.51.a: "中白友谊？"
  belarus_another.52.t: "牛仔裤革命"
  belarus_another.52.d: "白俄罗斯人民站出来抗议合法政府，要求整个政府辞职。我希望我们为此做好了充分的准备？"
  belarus_another.52.a: "镇压抗议"
@@ -2231,3 +2210,22 @@
  BLR_military_nazbol_desc: "我们的军工还没有恢复到苏联时代的水平，我们必须解决这个问题。"
  BLR_anti_baltic_idea: "反波罗的海主义"
  BLR_anti_ukraine_idea: "反乌克兰主义"
+ BLR_zmagar_army: "军队改革"
+ BLR_zmagar_army_desc: "我们的军队急需改革，当我们忙于国家的社会政治改革时，我们的武装力量被严重削弱。"
+ BLR_revansh_return: "复兴正义复仇"
+ BLR_revansh_return_desc: "正义复仇是90年代的民族主义组织，宣扬反波兰和反俄罗斯言论，并坚信有必要以乌克兰的方式建立准军事组织。"
+ BLR_blackcat: "复兴黑猫"
+ BLR_blackcat_desc: "黑猫是白俄罗斯境内的一个大型游击组织，活动时间长达40年，为反对苏联政府争取独立而斗争。他们的方法将完美地帮助我们抵御敌人的入侵。"
+ BLR_whitelegion_battalion_category: "白色军团"
+ BLR_whitelegion_battalion_category_desc: "白色军团是白俄罗斯的一个体育和爱国组织，后来转变为军事组织。白色军团出现于20世纪90年代初，负责维护反对派会议和集会的秩序。他们被训练为特种部队。 他们传承一顶钢制贝雷帽——类似于克拉波维贝雷帽。他们深入了解了白俄罗斯的历史。"
+ BLR_white_legion_battalion_create: "创建一个白色军团营"
+ BLR_white_legion_recruit_youngfront: "招募青年阵线毕业生"
+ BLR_white_legion_recruit_people: "招募忠诚公民"
+ BLR_white_legions_TT: "新招募的人数将按§Y[?modify_white_legion]§!\n"
+ BLR_whitelegion_recruit_2000: "可招募的人数为2000人"
+ BLR_blackkcat: "黑猫"
+ BLR_revanshh: "正义复仇"
+ BLR_white_legion_recruit_revansh: "招募‘正义复仇’组织成员"
+ BLR_create_nationalsecurity: "创建新部门"
+ BLR_create_nationalsecurity_desc: "我们将建立两个新的机构 - 国家安全局和国家情报局，而不是苏联遗留下来的KGB。"
+ BLR_National_Intelligence_Service: "国家情报局"
