--- a/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
@@ -1112,7 +1112,7 @@
  CHI_Shell_Kinmen_and_Matsu_desc: "金门与马祖就坐落在我们沿海地区，到处都是军事设施。我们应该在台湾人为即将到来的冲突做好准备之前袭击这些岛。"
  CHI_The_Fate_of_the_Macclesfield_Bank: "中沙群岛的命运"
  CHI_The_Fate_of_the_Macclesfield_Bank_desc: "我们与菲律宾就中沙群岛控制权的争端是我们两国关系紧张的一个重要根源。解决这一争端将对改善中菲关系大有帮助。"
- CHI_Outer_Mongolia_Return: "外蒙古的回归"
+ CHI_Outer_Mongolia_Return: "外蒙古回归"
  CHI_Outer_Mongolia_Return_desc: "时隔近百年之后，漠北、喀尔喀大草原再次回到我们的控制之下，这是中华民族伟大复兴的重要标志。"
  CHI_Prosperous_Borderland: "繁荣的边疆"
  CHI_Prosperous_Borderland_desc: "作为一个多民族大国，只有边疆地区的安定繁荣才能维护我们的国家统一与民族复兴。"
