--- a/localisation/simp_chinese/MD_focus_POL_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_POL_l_simp_chinese.yml
@@ -652,7 +652,7 @@
  POL_works_with_the_russian_army_on_a_new_tank_generation_desc: "旧的T型坦克单独来说并不是一个很大的威胁，所以我们需要改变这一点。"
  POL_commencement_of_production_of_the_t_14_armata_at_zm_bumar_labedy: "开始T-14 阿玛塔坦克生产"
  POL_commencement_of_production_of_the_t_14_armata_at_zm_bumar_labedy_desc: "坦克的世代永远不会太多。"
- POL_missile_and_artillery_forces: "导弹和​​炮兵部队"
+ POL_missile_and_artillery_forces: "导弹与​​炮兵部队"
  POL_missile_and_artillery_forces_desc: "我们需要把重点放在能够有效摧毁远距离重型坦克和敌方航空兵的机器上。"
  POL_artillery_modernization_with_the_west: "与西方的炮兵现代化"
  POL_artillery_modernization_with_the_west_desc: "我们应该保持我们的西方盟友。"
