--- a/localisation/simp_chinese/MD_focus_RAJ_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_RAJ_l_simp_chinese.yml
@@ -1829,3 +1829,9 @@
  RAJ_a_rising_power_idea_desc: "印度正在世界上崛起，随着我们在全球舞台上变得越来越强大，其他国家的目光也继续注视着。"
  TRK_Not_accepted: "土库曼斯坦没有接受我们的建议！"
  RAJ_Local_markets: "印度本土贸易"
+ indian_event.667.t: "美国同意"
+ indian_event.667.d: "他们将取消巴基斯坦的主要非北约盟国地位。"
+ indian_event.667.a: "太棒了！"
+ indian_event.668.t: "美国拒绝了我们的请求。"
+ indian_event.668.d: "巴基斯坦仍然是美国的主要非北约盟国。"
+ indian_event.668.a: "啧"
