--- a/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
@@ -4548,3 +4548,7 @@
  sov_oligarchs.4.b: "我们将任命一位名义上的总统。"
  sov_oligarchs.4.c: "鲍里斯·别列佐夫斯基将成为总统。"
  sov_oligarchs.4.e: "米哈伊尔·霍多尔科夫斯基将成为总统。"
+ SOV_rostech_idea: "俄罗斯国家技术集团"
+ SOV_kbp_idea: "KBP仪器设计局"
+ SOV_rosoboronprom_idea: "俄罗斯国防工业股份公司"
+ SOV_kalashnikov_idea: "卡拉什尼科夫集团"
