--- a/localisation/english/MD_focus_PMR_l_english.yml
+++ b/localisation/english/MD_focus_PMR_l_english.yml
@@ -405,7 +405,7 @@
  PMR_drozdov: "Revive the Volunteer Army"
  PMR_drozdov_desc: "The Volunteer Army was created during the Russian Civil War. She defended the interests of the white movement and was a true army of patriots and defenders of Russia, we will revive her and lead her under our banner"
  PMR_kornilov: "Revive the Kornilov Regiment"
- PMR_kornilov_desc: "We will honor the fallen soldiers of the Drozdov regiment and revive it in the ranks of our army."
+ PMR_kornilov_desc: "We will honor the fallen soldiers of the Kornilov regiment and revive it in the ranks of our army."
  PMR_revive: "Revive the Drozdov Regiment"
  PMR_revive_desc: "We will honor the fallen soldiers of the Drozdov regiment and revive it in the ranks of our army."
  PMR_return_empire: "The Revival of the Russian Empire"
